testsuite/tests/safeHaskell/warnings/T22728b.hs
{-# LANGUAGE Safe #-}
{-# LANGUAGE Haskell2010 #-}
{-# OPTIONS_GHC -Werror=inferred-safe-imports #-}
module T22728b (module T22728b_B) where

import T22728b_B
